Added Spring navbar, LESS styling, bug fixes updated dependencies